# secdev

./: .gitignore  LICENSE  Makefile  README.md  index.html  secdev.md
css/: hk-espresso.css  hk-tango.css  talk-specific.css
examples/: README.md  build.sh
examples/common/: small-examples.cabal  stack.yaml
examples/common/app/: AddTwoNumbers.hs  CarServer.hs  Intro.hs  LogApi.hs  PhantomTypes.hs  SavedState.hs  TypeFamilies.hs
examples/common/src/: Datatypes.hs  MySafeStore.hs  MyStore.hs
examples/reflex-common/: mdl-widgets.cabal  stack.yaml
examples/reflex-common/src/: MdlWidgets.hs
examples/reflex-ghcjs-client/: reflex-ghcjs.cabal  stack.yaml
examples/reflex-ghcjs-client/app/: BlobsMain.hs  ServerXssMain.hs  XssSafeMain.hs  XssUnsafeMain.hs
examples/reflex-ghcjs-client/src/: Blobs.hs  ClientSafeDom.hs  ServerSafeDom.hs
examples/reflex-ghcjs-server/: stack.yaml  xss-server.cabal
examples/reflex-ghcjs-server/src/: Main.hs
examples/reflex-ghcjs-server/static/: blobs.html  server-xss-safe.html  xss-safe.html  xss-unsafe.html
examples/reflex-ghcjs-server/static/css/: code.css  xss.css
examples/reflex-ghcjs-server/static/js/: .gitignore  highlight.pack.js
reveal.js/: .gitignore  package.json
reveal.js/css/: reveal.min.css
reveal.js/css/theme/: braje-white.css  braje.css
reveal.js/css/theme/source/: braje-white.scss  braje.scss
reveal.js/js/: reveal.min.js
slide-build/: header.tmpl  main.hs.tmpl  module.hs.tmpl  slides.cabal  stack.yaml  template.html
slide-build/filter-bld/: filter.cabal  filter.hs
slide-build/slides-src/: ReflexCommon.hs
