name: slides
version: 1.0
synopsis: Slide code injection for talk
author: MIT Lincoln Laboratory
build-type: Simple
cabal-version: >= 1.18

executable slides
  default-language: Haskell2010
  hs-source-dirs:   slides-src
  main-is:          main.hs
  other-modules:    M1, M2, M3, M4, M5, ReflexCommon
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -dedupe
  cpp-options:      -DGHCJS_BROWSER
  build-depends:    base
                  , mdl-widgets
                  , reflex-ghcjs
                  , either
                  , text
                  , lens
                  , mtl
                  , transformers
                  , vector
                  , aeson
                  , bytestring
                  , containers
                  , formatting
                  , reflex
                  , reflex-dom
                  , ghcjs-dom
                  , ghcjs-base
                  , xss-sanitize
