name:                mdl-widgets
version:             0.1.0.0
synopsis:            ghcjs example
description:         ghcjs example
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:    Haskell2010
  hs-source-dirs:      src/
  exposed-modules:     MdlWidgets
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , containers
                     , ghcjs-dom
                     , ghcjs-base
                     , lens
                     , reflex
                     , reflex-dom
                     , text
                     , xss-sanitize
