name:                reflex-ghcjs
version:             0.1.0.0
synopsis:            ghcjs example
description:         ghcjs example
build-type:          Simple
cabal-version:       >=1.18


library
  default-language:    Haskell2010
  hs-source-dirs:      src/
  exposed-modules:     Blobs
                     , ClientSafeDom
                     , ServerSafeDom
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-dom
                     , ghcjs-base
                     , lens
                     , reflex
                     , reflex-dom
                     , text
                     , vector
                     , lucid
                     , transformers
                     , aeson
                     , containers
                     , bytestring
                     , mdl-widgets
                     , xss-sanitize

executable blobs
  default-language:    Haskell2010
  hs-source-dirs:      app/
  main-is:             BlobsMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , reflex-ghcjs
                     , ghcjs-dom
                     , ghcjs-base
                     , lens
                     , reflex
                     , reflex-dom
                     , text
                     , vector
                     , lucid
                     , transformers
                     , aeson
                     , containers
                     , bytestring
                     , mdl-widgets

executable xss-unsafe
  default-language:    Haskell2010
  hs-source-dirs:      app/
  main-is:             XssUnsafeMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , mdl-widgets
                     , ghcjs-dom
                     , ghcjs-base
                     , lens
                     , reflex
                     , reflex-dom
                     , text
                     , xss-sanitize

executable xss-safe
  default-language:    Haskell2010
  hs-source-dirs:      app/
  main-is:             XssSafeMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , reflex-ghcjs
                     , mdl-widgets
                     , reflex
                     , text

executable serverside-xss-safe
  default-language:    Haskell2010
  hs-source-dirs:      app/
  main-is:             ServerXssMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  build-depends:       base
                     , reflex-ghcjs
                     , mdl-widgets
                     , ghcjs-dom
                     , reflex
                     , text
