name: filter
version: 1.0
synopsis: pandoc filter
author: MIT Lincoln Laboratory
build-type: Simple
cabal-version: >= 1.18

library
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends: base >= 4 && < 5
               , pandoc-types
               , process
               , text

executable filter-pandoc
  default-language: Haskell2010
  main-is: filter.hs
  hs-source-dirs: .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >= 4 && < 5
               , pandoc-types
               , process
               , text
